--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -1,1 +1,8 @@
-@import "bootstrap";
+@use 'bootstrap/scss/bootstrap';
+
+@use "./custom.css";
+
+@use "./application.scss";
+
+@use "./fontawesome.all.css";
+
