--- a/app/views/shared/_layout_header.html.erb
+++ b/app/views/shared/_layout_header.html.erb
@@ -9,5 +9,5 @@
   </button>
   <img src="<%= asset_path 'logo.png' %>" width="800" height="60" style="padding: 5px 30px">
   <div class="flex-fill"></div>
-  <%= link_to "Logout", "destroy_user_session_path", class: "btn btn-danger me-3 my-1" %>
+  <%= link_to "Logout", destroy_user_session_path, class: "btn btn-danger me-3 my-1" %>
 </nav>
