--- a/app/views/shared/_sidebar_collapse.html.erb
+++ b/app/views/shared/_sidebar_collapse.html.erb
@@ -1,5 +1,5 @@
 <li>
-  <a href="#menu" data-bs-toggle="collapse" data-bs-target="#<%= id %>" aria-expanded="false">
+  <a class="text-decoration-none py-2" href="#menu" data-bs-toggle="collapse" data-bs-target="#<%= id %>" aria-expanded="false">
     <%= title %>
   </a>
   <ul class="collapse" id="<%= id %>">
