--- a/app/views/shared/_sidebar_link.html.erb
+++ b/app/views/shared/_sidebar_link.html.erb
@@ -1,3 +1,3 @@
 <li>
-  <%= link_to yield, href, class: "text-white py-2" %>
+  <%= link_to yield, href, class: "text-white py-2 text-decoration-none" %>
 </li>
