--- a/app/views/abouts/show.html.erb
+++ b/app/views/abouts/show.html.erb
@@ -2,14 +2,16 @@
   <h2>
     <p class="text-center">About</p>
   </h2>
-  <h5>
+  <h4>
     <p class="text-center">Informasi Mengenai Website</p>
-  </h5>
-  <p> Website ini merupakan website yang memberikan sarana dalam melakukan proses pendaftaran KKP dan SKRIPSI. Dengan adanya website ini, proses pendaftaran KKP dan SKRIPSI dapat dilakukan dengan lebih mudah dan lebih fleksibel. Website ini dikembangkan setelah adanya pandemi COVID-19, yang hingga kini belum mereda. Dengan adanya website ini, diharapkan dapat membantu para mahasiswa dalam melakukan proses administrasi kedepan. Untuk informasi lebih lanjut, bisa hubungi kontak di bawah ini.</p>
-  <%# TODO: use li instead of <div> %>
+  </h4>
+  <p> Website ini merupakan website yang memberikan sarana dalam melakukan proses pendaftaran KKP dan SKRIPSI. Dengan adanya website ini, proses pendaftaran KKP dan SKRIPSI dapat dilakukan dengan lebih mudah dan lebih fleksibel. Website ini dikembangkan setelah adanya pandemi COVID-19, yang hingga kini belum mereda. Dengan adanya website ini, diharapkan dapat membantu para mahasiswa dalam melakukan proses administrasi kedepan.</p>
   <div>
-    <div>Pak Gilang : 08xxxxxxxxxx</div>
-    <div>Pak Aditya : 08xxxxxxxxxx</div>
-    <div>Pak Gumelar : 08xxxxxxxxxx</div>
+  <h5 class="mb-3">Kontak</h5>
+    <ul>
+      <li>Pak Gilang : 08xxxxxxxxxx</li>
+      <li>Pak Aditya : 08xxxxxxxxxx</li>
+      <li>Pak Gumelar : 08xxxxxxxxxx</li>
+    </ul>
   </div>
 </div>
