--- a/app/views/essay_proposals/new.html.erb
+++ b/app/views/essay_proposals/new.html.erb
@@ -1,20 +1,3 @@
 <div class="mx-auto bg-white p-3" style="max-width: 560px">
-  <h2 class="text-center">Daftar Skripsi</h2>
-  <%= bootstrap_form_with(url: {action: :create}, model: @model, html: {class: "grid", style: "--bs-columns: 1; --bs-gap: 0"}) do |f| %>
-    <%= f.telephone_field :id_number, required: true, readonly: true, value: current_user&.id_number %>
-    <%= f.text_field :name,
-    required: true,
-    readonly: true,
-    value: current_user&.name %>
-    <%= f.email_field :email, required: true %>
-    <%= f.telephone_field :phone_number, required: true %>
-    <%= f.telephone_field :title, required: true %>
-    <%= f.file_field :outline_file, required: true %>
-    <%= f.file_field :form_file, required: true %>
-    <%= f.file_field :kkp_report_submission_proof_file, required: true %>
-    <%= f.file_field :current_krs_file, required: true %>
-    <%= f.file_field :payment_proof_file, required: true %>
-    <%= f.file_field :academic_transcript_file, required: true %>
-    <%= f.primary "Kirim", render_as_button: true %>
-  <% end %>
+  <%= render "unregistered" %>
 </div>
