--- a/app/views/essay_proposals/_registration_status.html.erb
+++ b/app/views/essay_proposals/_registration_status.html.erb
@@ -1,14 +1,14 @@
 <div>
-  <div class="d-flex mb-3">
+  <div class="d-flex mb-3" aria-label="status">
     <div class="me-1">Status:</div>
-    <%= @model.status %>
+    <%= @essay_proposal.status %>
   </div>
-  <% if @model.revision_message.present? %>
-    <div>
+  <% if @essay_proposal.rejected? && @essay_proposal.revision_message %>
+    <div aria-label="keterangan">
       Keterangan
-      <p class="border p-1" style="min-height: 180px; ">
-        <%= @model.revision_message %>
-      </p>
+      <div class="border p-2" style="min-height: 180px; ">
+        <%= @essay_proposal.revision_message %>
+      </div>
     </div>
   <% end %>
 </div>
