--- a/app/views/essay_proposals/_unregistered.html.erb
+++ b/app/views/essay_proposals/_unregistered.html.erb
@@ -1,7 +1,7 @@
 
 <h2 class="text-center">Mendaftar Skripsi</h2>
 <%= render "user_form" %>
-<%= bootstrap_form_with(url: {action: :create}, model: @model) do |f| %>
+<%= bootstrap_form_with(url: {action: :create}, model: @essay_proposal) do |f| %>
   <%= f.text_field :title, required: true %>
   <%= f.file_field :outline_file, required: true, accept: "application/pdf" %>
   <%= f.file_field :form_file, required: true, accept: "application/pdf" %>
