--- a/app/views/essay_proposals/_user_form.html.erb
+++ b/app/views/essay_proposals/_user_form.html.erb
@@ -1,4 +1,4 @@
-<%= bootstrap_form_with(model: current_user, url: "#") do |f| %>
+<%= nosubmit_bootstrap_form_with(model: current_user) do |f| %>
   <%= f.telephone_field :id_number, name: nil, readonly: true %>
   <%= f.text_field :name, readonly: true %>
   <%= f.email_field :email, readonly: true %>
