--- a/app/views/essay_proposals/_registered.html.erb
+++ b/app/views/essay_proposals/_registered.html.erb
@@ -1,7 +1,7 @@
 <h2 class="text-center">Edit Data Pendaftaran Skripsi</h2>
 <%= render "registration_status" %>
 
-<%= render "user_form" %>
+<%= render "shared/user_form" %>
 <%= bootstrap_form_with(model: @essay_proposal) do |f| %>
   <%= f.text_field :title %>
   <%= f.file_field_with_preview(:outline_file, accept: "application/pdf") %>
