--- a/app/views/kkp_registrations/_fields.html.erb
+++ b/app/views/kkp_registrations/_fields.html.erb
@@ -1,16 +1,19 @@
 
-<%= bootstrap_form_with(model: current_user, url: "", html: { onsubmit: "return false" }) do |f| %>
-  <%= f.text_field :id_number, readonly: true %>
-  <%= f.text_field :name, readonly: true %>
-  <%= f.text_field :email, readonly: true %>
-  <%= f.text_field :phone_number, readonly: true %>
-<% end %>
+<%= render "registration_status" %>
+<%= render "shared/user_form" %>
 
 <%= bootstrap_form_with(model: @kkp_registration, html: { onsubmit: "return false" }) do |f| %>
-  <%= f.text_field :entity_name, readonly: true %>
   <%= f.file_preview :registration_form_file %>
   <%= f.file_preview :khs_semester_6 %>
   <%= f.file_preview :krs_semester_7 %>
   <%= f.file_preview :payment_proof_file %>
   <%= f.file_preview :academic_transcript_file %>
+  <%= f.text_field :entity_name, readonly: true %>
+  <%= f.select :individual,
+    KkpRegistration.individual_options,
+    {}, disabled: true %>
+  <%= f.text_field :members, readonly: true %>
+  <%= f.select :entity_type,
+    KkpRegistration.entity_type_options,
+    {}, disabled: true %>
 <% end %>
