--- a/app/views/kkp_registrations/_registered.html.erb
+++ b/app/views/kkp_registrations/_registered.html.erb
@@ -1,7 +1,7 @@
 <h2 class="text-center">Edit Data Pendaftaran kkp</h2>
 <%= render "registration_status" %>
 
-<%= render "user_form" %>
+<%= render "shared/user_form" %>
 <%= bootstrap_form_with(model: @kkp_registration) do |f| %>
   <%= f.text_field :entity_name %>
   <%= f.file_field_with_preview(:khs_semester_6, accept: "application/pdf") %>
@@ -9,5 +9,12 @@
   <%= f.file_field_with_preview :registration_form_file, accept: "application/pdf" %>
   <%= f.file_field_with_preview :payment_proof_file, accept: "application/pdf,image/png,image/jpeg" %>
   <%= f.file_field_with_preview :academic_transcript_file, accept: "application/pdf" %>
+  <%= f.select :individual,
+    KkpRegistration.individual_options,
+    {} %>
+  <%= f.text_field :members %>
+  <%= f.select :entity_type,
+    KkpRegistration.entity_type_options,
+    {} %>
   <%= f.primary "Perbarui", render_as_button: true, extra_class: "w-100" %>
 <% end %>
