--- a/app/views/kkp_registrations/_registration_status.html.erb
+++ b/app/views/kkp_registrations/_registration_status.html.erb
@@ -4,12 +4,7 @@
     <%= @kkp_registration.status %>
   </div>
   <% if @kkp_registration.rejected? && @kkp_registration.revision_message %>
-    <div aria-label="keterangan">
-      Keterangan
-      <div class="border p-2" style="min-height: 180px; ">
-        <%= @kkp_registration.revision_message %>
-      </div>
-    </div>
+    <%= render "shared/revision_message", content: @kkp_registration.revision_message %>
   <% elsif @kkp_registration.approved? && @kkp_registration.official_memo.present? %>
     <%= nosubmit_bootstrap_form_with(model: @kkp_registration) do |f| %>
         <%= f.file_preview :official_memo %>
