--- a/app/views/kkp_registrations/_unregistered.html.erb
+++ b/app/views/kkp_registrations/_unregistered.html.erb
@@ -10,7 +10,7 @@
   <%= f.file_field :payment_proof_file, required: true, accept: "application/pdf" %>
   <%= f.file_field :academic_transcript_file, required: true, accept: "application/pdf,image/png,image/jpeg" %>
   <%= f.select :individual,
-    KkpRegistration.individual_options,
+    KkpRegistration.kkp_type_options,
     {} %>
   <%= f.text_field :members %>
   <%= f.select :entity_type,
