--- a/app/views/kkp_guidances/index.html.erb
+++ b/app/views/kkp_guidances/index.html.erb
@@ -17,9 +17,9 @@
         <tr>
           <td><%= index + 1 %></td>
           <td><%= kkp_guidance.user.name %></td>
-          <td><%= kkp_guidance.kkp_registration.entity_name %></td>
+          <td><%= kkp_guidance.entity_name %></td>
           <td>
-            <%= link_to "Cek", kkp_guidance, class: "btn btn-primary" %>
+            <%= link_to "Lihat", kkp_guidance, class: "btn btn-primary" %>
           </td>
           <td><%= kkp_guidance.pass %></td>
         </tr>
