--- a/app/views/kkp_guidances/_fields.html.erb
+++ b/app/views/kkp_guidances/_fields.html.erb
@@ -1,18 +1,6 @@
-
 <%= render "shared/user_form" %>
 
 <%= bootstrap_form_with(model: @kkp_guidance, html: { onsubmit: "return false" }) do |f| %>
-  <%= f.file_preview :registration_form_file %>
-  <%= f.file_preview :khs_semester_6 %>
-  <%= f.file_preview :krs_semester_7 %>
-  <%= f.file_preview :payment_proof_file %>
-  <%= f.file_preview :academic_transcript_file %>
-  <%= f.text_field :entity_name, readonly: true %>
-  <%= f.select :individual,
-    KkpRegistration.kkp_type_options,
-    {}, disabled: true %>
-  <%= f.text_field :members, readonly: true %>
-  <%= f.select :entity_type,
-    KkpRegistration.entity_type_options,
-    {}, disabled: true %>
+  <%= f.file_preview :report_file %>
+  <%= f.file_preview :score_file %>
 <% end %>
