--- a/app/views/shared/_layout_sidebar.html.erb
+++ b/app/views/shared/_layout_sidebar.html.erb
@@ -1,8 +1,8 @@
 <nav class="navbar-default navbar-side" role="navigation">
   <div class="sidebar-collapse">
     <ul class="nav flex-column" id="main-menu">
-      <%= cache current_user.menu_presenter.cache_key do %>
+      <%#= cache current_user.menu_presenter.cache_key do %>
         <%= render "shared/sidebar_menu", items: current_user.menu_presenter.menus %>
-      <% end %>
+      <%# end %>
   </div>
 </nav>
