--- a/app/views/shared/_layout_header.html.erb
+++ b/app/views/shared/_layout_header.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-cls-top mb-0 p-0 justify-content-start">
-  <a class="navbar-brand me-0 d-flex align-items-center justify-content-center" href="index.php?halaman=mahasiswa" style="font-size: 16px">
+  <a class="navbar-brand me-0 d-flex align-items-center justify-content-center" href="<%= root_path %>" style="font-size: 16px">
     Universitas Serang Raya
     <img src="<%= asset_path 'logo-universitas.png' %>" width="25" height="25">
   </a>
