--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,2 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<h1 class="text-center">Selamat datang</h1>
+<h2 class="text-center">di sistem bimbingan kampus</h2>
